<resources>
    <string name="app_name">E-llumination</string>

    <string name="COLOR_1">COLOR_1</string>
    <string name="COLOR_2">COLOR_2</string>
    <string name="COLOR_3">COLOR_3</string>
    <string name="TIME_BAR">TIME_BAR</string>
    <string name="TIME_TEXT">TIME_TEXT</string>
    <string name="param_frequence">Fréquence : %10.2f</string>
    <string name="param_lumin">Luminosité : %3d%c</string>
    <string name="text_mode_auto">En mode <b>AUTONOME</b> chaque machine du groupe réponds à son capteur. A chaque impulsion, la couleur choisie s\'affiche pendant un court instant.</string>
    <string name="groupes">Groupes</string>
    <string name="Machines">Machines dispo</string>
    <string name="param_machines">PARAMETRAGE DES MACHINES</string>
    <string name="crea_chore">CREATION DE CHORÉEGRAPHIE</string>
    <string name="live_chore">MODE LIVE CHOREE</string>
    <string name="mode_live">MODE LIVE</string>
    <string name="header_add_machine">Ajout d\'une machine</string>
    <string name="dialog_add_adresse">Adresse machine</string>
    <string name="dialog_add_addmachine">Ajouter la machine</string>
    <string name="dialog_rem_remmachine">Supprimer la machine ?</string>
    <string name="dialog_add_cancel">Annuler</string>
    <string name="mc_group_machines">Machines du groupe</string>
    <string name="mc_group_noselect"><![CDATA[<Aucun groupe selectionné>]]></string>
    <string name="delete_machine">Supprimer ?</string>
    <string name="dialog_rem_remmachineb">Supprimer !</string>
    <string name="dialog_rem_remgroupb">Supprimer !</string>
    <string name="dialog_rem_groupeEtEffet">Supprimer le lien!</string>
    <string name="dialog_rem_remgroup">Supprimer le groupe ?</string>
    <string name="header_add_groupe">Ajout d\'un groupe</string>
    <string name="header_add_chore">Ajout d\'une choree</string>
    <string name="add_groupe_nom">Nom du groupe :</string>
    <string name="add_chore_nom">Nom de la choree :</string>
    <string name="dialog_add_addgroupe">Créer le groupe</string>
    <string name="mode_change_ok">Changer de mode</string>
    <string name="mode_change_title">Changer de mode ?</string>
    <string name="change_mode_message">Voulez-vous quitter le mode %s ? Toutes les fonctionnalités associées seront interrompues !</string>
    <string name="com_error_init_title">Erreur de communication !</string>
    <string name="com_error_init_message">Impossible d\'initialiser la communication série. Veuillez vérifier que le cable est bien branché, et que la station de base est bien allumée, puis réessayez.</string>
    <string name="com_error_init_retry">Réessayer</string>
    <string name="com_error_init_quit">Quitter</string>
    <string name="log_communication_writemessage">Ecriture d\'un message de %d octets</string>
    <string name="log_communication_waitresponse">En attente d\'une réponse...</string>
    <string name="log_communication_error_noconnected">La station de base n\'est pas connectée !</string>
    <string name="log_communication_connecteddevices">Nombre de devices : %d</string>
    <string name="log_communication_deviceinfos">Device : %d : %s</string>
    <string name="log_communication_paramsinfo">Parametres(BR, DB, SB, TO) : [%d] [%d] [%d] [%d]</string>
    <string name="log_communication_noresponse">Aucune réponse !</string>
    <string name="log_communication_receivemessage">Reception de %d octets</string>
    <string name="log_communication_requestpermission">Requête de permission</string>
    <string name="log_communication_timeout">Temps d\'attente dépasse pour la machine %d</string>
    <string name="log_communication_error">Une erreur inconnue s\'est produite sur la machine %d</string>
    <string name="log_communication_notinit">La communication serie n\'est pas initialisée !</string>
    <string name="log_communication_sendeffect">Envoi d\'un effet \'%s\' sur la machine #%d</string>
    <string name="main_dialog_quit_title">Quitter l\'application ?</string>
    <string name="main_dialog_quit_message">Voulez-vous vraiment quitter l\'application ? Le show lumière s\'arrêtera de lui même !</string>
    <string name="main_dialog_quit_ok">Quitter l\'application</string>
    <string name="com_error_timeout_msg">Impossible de joindre la machine #%d</string>
    <string name="color_3_str">Couleur 3</string>
    <string name="color_2_str">Couleur 2</string>
    <string name="color_1_str">Couleur 1</string>
    <string name="com_error_test_title">Résultat des tests</string>
    <string name="fab_action_add_machine_label">Ajouter une machine</string>
    <string name="fab_action_add_groupe_label">Ajouter un groupe</string>
    <string name="fab_action_test_label">Tester les machines</string>
    <string name="fab_action_change_color_label">Changer les couleurs</string>
    <string name="menu_color">Gestion des couleurs</string>
    <string name="menu_machines">Gestion des machines</string>
    <string name="menu_live">Live</string>
    <string name="menu_creation">Creation Choree</string>
    <string name="param_colors">Configuration des couleurs</string>
    <string name="colors">Couleurs définies</string>
    <string name="color_name_label">Couleur %d</string>
    <string name="menu_help">Aide</string>
    <string name="com_error_all_success">Toutes les machines semblent connectées !</string>
    <string name="header_pick_color">Choix de la couleur</string>
    <string name="dialog_set_setcolor">Changer la couleur</string>
    <string name="LUMIN">LUMIN</string>
    <string name="machine_adapter_title_machine">Machine</string>
    <string name="param_intensite">Intensité max : %10.2f</string>
    <string name="INTENSITY_BAR">INTENSITY_BAR</string>
    <string name="INTENSITY_TEXT">INTENSITY_TEXT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mesChoree">Mes chorées</string>
    <string name="dialog_add_addchore">Créer la chorée</string>
    <string name="dialog_add_addbloc">Créer le bloc</string>
    <string name="mesBlocs">Blocs liés</string>
    <string name="mc_chore_noselect"><![CDATA[<Aucune Choree selectionnee>]]></string>
    <string name="mc_bloc_noselect"><![CDATA[<Aucun Bloc selectionne]]></string>
    <string name="mesGroupesEtEffets">Groupe et Effet liés</string>
    <string name="fab_action_add_chore">Ajouter une choree</string>
    <string name="fab_action_add_bloc">Ajouter un bloc</string>
    <string name="fab_action_gestion">Ajouter un lien</string>
    <string name="header_add_bloc">Ajout d\'un bloc</string>
    <string name="add_bloc_nom">Nom du bloc :</string>
    <string name="header_gestion">Ajouter un lien</string>
    <string name="gestion_groupe_nom">Groupe concerné</string>
    <string name="gestion_effet_nom">Nom de l\'effet :</string>
    <string name="gestion_effet_couleur1">Choix couleur 1 :</string>
    <string name="gestion_effet_couleur2">Choix couleur 2 :</string>
    <string name="gestion_effet_frequence">Choix Fréquence :</string>
    <string name="gestion_effet_duree">Choix Durée :</string>

    <string name="gestion_couleur_nom">Choix de la couleur :</string>
    <string name="dialog_gestion_nomBloc">Bloc :</string>
    <string name="dialog_gestion_fin">Ajouter lien</string>

</resources>
