<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/param_button_1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/color_1_str"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:tag="@string/COLOR_1"
            android:visibility="gone"/>

        <Button
            android:id="@+id/param_button_2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/color_2_str"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:tag="@string/COLOR_2"
            android:visibility="gone" />

        <Button
            android:id="@+id/param_button_3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/color_3_str"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:tag="@string/COLOR_3"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">


        <TextView
            android:id="@+id/param_slider_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/param_frequence"
            android:tag="@string/TIME_TEXT"
            android:visibility="gone"
            android:textSize="15sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="middle"/>

        <SeekBar
            android:id="@+id/param_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:tag="@string/TIME_BAR"
            android:visibility="gone"
            android:max="200"
            android:progress="100"
            android:theme="@style/Widget.AppCompat.SeekBar" />

        <TextView
            android:id="@+id/param_slider_label_intensite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/param_intensite"
            android:tag="@string/INTENSITY_TEXT"
            android:visibility="gone"
            android:textSize="15sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="middle"/>

        <SeekBar
            android:id="@+id/param_slider_intensite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:tag="@string/INTENSITY_BAR"
            android:visibility="gone"
            android:max="100"
            android:progress="50"
            android:theme="@style/Widget.AppCompat.SeekBar" />



    </LinearLayout>

    <TextView
        android:id="@+id/module_text_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:visibility="gone"/>


</LinearLayout>
