<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/design_default_color_primary"
        android:gravity="center_vertical|center_horizontal"
        android:scaleType="center"
        android:text="@string/header_gestion"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/blocNom"
            android:gravity="end"
            android:text="@string/dialog_gestion_nomBloc"/>

        <TextView
            android:id="@+id/blocNom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="nomBloc"/>


    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:labelFor="@+id/spinner_groupe"
        android:layout_gravity="end"
        android:text="@string/gestion_groupe_nom"/>
    <Spinner
        android:id="@+id/spinner_groupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:labelFor="@+id/spinner_effet"
        android:layout_gravity="end"
        android:text="@string/gestion_effet_nom"/>
    <Spinner
        android:id="@+id/spinner_effet"
        android:entries="@array/effet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/spinner_couleur1"
            android:layout_gravity="end"
            android:text="@string/gestion_effet_couleur1"/>
        <Spinner
            android:id="@+id/spinner_couleur1"
            android:entries="@array/effet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/spinner_couleur2"
            android:layout_gravity="end"
            android:text="@string/gestion_effet_couleur2"/>
        <Spinner
            android:id="@+id/spinner_couleur2"
            android:entries="@array/effet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:labelFor="@+id/barFreq"
            android:text="@string/gestion_effet_frequence" />

        <TextView
            android:id="@+id/textFreq"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="1,00" />

        <SeekBar
            android:id="@+id/barFreq"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:max="200"
            android:progress="100"
            android:theme="@style/Widget.AppCompat.SeekBar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/barDuree"
            android:layout_gravity="end"
            android:text="@string/gestion_effet_duree"/>

        <TextView
            android:id="@+id/textDuree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="2 s"/>

        <SeekBar
            android:id="@+id/barDuree"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="20"/>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>