<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/right_machine_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.machine.CenterFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/mc_group_machines"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/tv_mc_groupe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_machines"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:orientation="vertical">

        <TextView
            android:id="@+id/param_lumin_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/param_lumin"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="middle"/>

        <SeekBar
            android:id="@+id/param_lumin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:tag="@string/LUMIN"
            android:max="100"
            android:progress="100"
            android:theme="@style/Widget.AppCompat.SeekBar" />

    </LinearLayout>


</LinearLayout>